# pytest-cleanup

./: .dockerignore  .gitignore  Dockerfile  LICENCE  Pipfile  README.md  pyproject.toml
config/: config.yaml
config/main/: deployment-pipeline.yaml
pytest_cleanup/: __init__.py  __main__.py  common.py  constants.py  recorder.py  runtime.py
templates/: deployment-pipeline.yaml
test/: __init__.py
test/test-data/tests.classes/Hey/call_all_class_method/: 01.json
test/test-data/tests.classes/Hey/call_all_method/: 01.json
test/test-data/tests.classes/Hey/call_all_static_method/: 01.json
test/test-data/tests.classes/Hey/go_class/: 01.json
test/test-data/tests.classes/Hey/go_class2/: 01.json
test/test-data/tests.classes/Hey/go_instance/: 01.json
test/test-data/tests.classes/Hey/go_instance2/: 01.json
test/test-data/tests.classes/Hey/go_static/: 01.json
test/test-data/tests.classes/Hey/go_static2/: 01.json
test/test-data/tests.classes/Inner1/go/: 01.json
test/test-data/tests.classes/Inner2/go/: 01.json
test/test-data/tests.classes/Inner3/go/: 01.json
test/test-data/tests.classes/Inner4/pass_inner/: 01.json
test/test-data/tests.classes/Inner5/pass_back/: 01.json
test/test-data/tests.classes/Inner5/pass_inner/: 01.json
test/test-data/tests.functions/tests.functions/generator1/: 01.json
test/test-data/tests.functions/tests.functions/higher_order/: 01.json
test/test-data/tests.functions/tests.functions/higher_order2/: 01.json
tests/: __init__.py  __main__.py  classes.py  functions.py
(+3 files in other folders)
